--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="title_activity_option">OptionActivity</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_user__info">User_Info</string>
 </resources>
